[package]
name = "clhlp-rl"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
ansi_term = "0.12"
clhlp-tkz = { path = "../clhlp-tkz" }
rustyline = "10"
rustyline-derive = "0.7"
thiserror = "1"

[dev-dependencies]
argh = "0.1"
dirs = "4"
glob = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
